# Uri

./: CMakeLists.txt  README.md
.github/workflows/: Debug.yml  Release.yml
include/URI/: Parser.h  Uri.h
source/: Parser.cpp  Uri.cpp
tests/: CMakeLists.txt  uri_tests.cpp
